Fixed desktop nav Overflow as hidden

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 8px;
+  width: 16px;
 
   /* width of the entire scrollbar */
 }
@@ -31,7 +31,7 @@ body::-webkit-scrollbar-thumb:active {
 }
 
 body::-webkit-scrollbar:hover {
-  width: 15px;
+  width: 20px;
 }
 
 .navigation {
@@ -687,6 +687,7 @@ aside {
     justify-content: center;
     background: none;
     z-index: 100;
+    overflow: hidden;
   }
 
   .desktop-version-illustration {
